--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,9 @@ img {
 
 .box-lowerimg img,
 .box-lowerimg video,
-.box-lowerimg iframe {
+.box-lowerimg iframe,
+.box-lowerimg object,
+.box-lowerimg embed {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -222,6 +224,85 @@ img {
 
 .highlighted {
     font-weight: bold;
+}
+
+.schuin-gedrukt {
+    font-style: italic;
+}
+
+.middle-text {
+    text-align: center;
+    justify-content: center;
+}
+
+.slideshow{
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+}
+
+.slides{
+    display: none;
+}
+
+.prev,
+.next{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 10px;
+    margin-top: -22pc;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition:0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    z-index: 5;
+}
+
+.next{
+    right: 0;
+    border: 3px 0 0 3px;
+}
+
+.prev{
+    left: 0;
+    border: 3px 0 0 3px;
+}
+
+.dot{
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline;
+    transition: background-color 0.06s ease;
+}
+
+.active,
+.dot:hover{
+    background-color: #717171;
+}
+
+.fade{
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
 }
 
 .box-rightimg .small-box {
@@ -264,11 +345,12 @@ img {
     background: #EAC59D;
     box-shadow: 0 10px 4px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
+    text-align: left;
 }
 
 section section {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     font-size: 50px;
     font-weight: 800;
